# deburger

./: .deburger.yml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PKG-INFO  PUBLISH.md  README.md  ROADMAP.md  TESTING.md  VERIFICATION_COMPLETE.md  publish_to_pypi.py  pyproject.toml  quick_test.py  setup.py
.claude/: CLAUDE.md  SKILLS.md
.github/workflows/: publish.yml  test.yml
docs/: QUICK_START.md
examples/: ai_monitored_api.py  full_workflow.md
examples/simple_math/: calculator.py  test_calculator.py
src/deburger/: __init__.py  _version.py  orchestrator.py
src/deburger/analyzer/: __init__.py  diff_analyzer.py
src/deburger/analyzers/: __init__.py  base.py  javascript_analyzer.py  python_analyzer.py  registry.py
src/deburger/analyzers/patterns/: __init__.py  base.py  cold_start.py  expensive_logging.py  no_connection_pool.py  s3_in_loop.py  unbounded_query.py  unindexed_query.py
src/deburger/cli/: __init__.py  analyze_command.py  config_command.py  config_wizard.py  guide_command.py  init_command.py  logs_command.py  main.py  report_command.py  run_command.py  security_command.py  test_command.py  watch_command.py
src/deburger/config/: __init__.py  loader.py
src/deburger/core/: __init__.py  classifier.py  fix_generator.py  parser.py  test_runner.py
src/deburger/cost/: __init__.py  cache.py  engine.py
src/deburger/decorators/: __init__.py  monitor.py
src/deburger/fixer/: __init__.py  auto_fixer.py
src/deburger/guidance/: __init__.py  steering.py
src/deburger/hooks/: __init__.py  manager.py
src/deburger/integrations/: __init__.py  ai_provider.py  blame.py  github_pr.py  openai_provider.py
src/deburger/llm/: __init__.py  client.py
src/deburger/metrics/: __init__.py  calculator.py
src/deburger/models/: __init__.py  error.py  fix.py  test_result.py
src/deburger/optimizer/: __init__.py  applier.py  cache.py  fixer.py  validator.py
src/deburger/providers/: __init__.py  aws_provider.py  azure_provider.py  base.py  gcp_provider.py  registry.py
src/deburger/requirements/: __init__.py  tracker.py
src/deburger/scanner/: __init__.py  fast_scanner.py
src/deburger/security/: __init__.py  multi_language_scanner.py  scanner.py
src/deburger/storage/: __init__.py  cache.py
src/deburger/testing/: __init__.py  generator.py
src/deburger/ui/: __init__.py  display.py
src/deburger/utils/: config.py  logger.py
src/deburger/watcher/: __init__.py  file_watcher.py
tests/: __init__.py
tests/unit/: test_metrics_calculator.py  test_parser.py  test_requirement_tracker.py  test_security_scanner.py  test_test_runner.py
tests/unit/core/: test_cache.py  test_cli.py  test_edges.py  test_hooks.py  test_logging.py  test_optimizer.py  test_providers.py  test_requirement_tracker.py  test_test_runner.py
tests/unit/javascript/: test_js_analyzer.py
tests/unit/python/: test_suppression.py
