[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deburger"
version = "1.0.1"
description = "Catch expensive cloud code before it ships detects costly patterns and estimates your monthly bill impact"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sahil Nayak", email = "sahilnayak2056@gmail.com"}
]
keywords = ["cloud", "cost-optimization", "aws", "gcp", "azure", "finops", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/sahilnyk/deburger"
"Bug Tracker" = "https://github.com/sahilnyk/deburger/issues"
"Source Code" = "https://github.com/sahilnyk/deburger"

[project.scripts]
deburger = "deburger.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
